--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
 spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 
 org.hibernate.SQL=debug
